--- a/data_annotation/src/DataAnnotation.css
+++ b/data_annotation/src/DataAnnotation.css
@@ -5,7 +5,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* min-height: 100vh; */
 }
 
 .fetch-button {
@@ -23,17 +22,45 @@
     background-color: #ff1493; /* darker pink */
 }
 
+.fetch-button:disabled {
+    background-color: #ffb6c1; /* light pink */
+    cursor: not-allowed;
+}
+
 .content-container {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 .canvas-container {
-    width: 800px; /* 2:1 aspect ratio */
-    height: 400px; /* 2:1 aspect ratio */
+    width: 800px;
+    height: 600px;
     margin-right: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    position: relative;
+    /* border: black 1px solid; */
+}
+
+.spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 50px;
+    height: 50px;
+    border: 5px solid #f3f3f3;
+    border-top: 5px solid #ff69b4; /* pink */
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+    transform: translate(-50%, -50%);
+}
+
+@keyframes spin {
+    0% { transform: translate(-50%, -50%) rotate(0deg); }
+    100% { transform: translate(-50%, -50%) rotate(360deg); }
 }
