--- a/data_annotation/src/AnnotationForm.css
+++ b/data_annotation/src/AnnotationForm.css
@@ -14,6 +14,12 @@
     width: 100%;
 }
 
+.info-icon {
+    cursor: pointer;
+    margin-right: 3px;
+    width: 0.8em;
+}
+
 label {
     display: block;
     margin-bottom: 5px;
