--- a/data_annotation/src/App.css
+++ b/data_annotation/src/App.css
@@ -9,6 +9,9 @@ body {
 .App-header {
     text-align: center;
     margin-bottom: 20px;
+    color: #ff69b4;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: x-large;
 }
 
 .App-main {
