Record time taken, add user id for prolific, improve tutorial

--- a/data_annotation/src/AnnotationForm.css
+++ b/data_annotation/src/AnnotationForm.css
@@ -26,10 +26,14 @@ label {
     color: #333;
 }
 
-textarea {
+textarea, input[type="text"] {
     width: 100%;
     border: 1px solid #ccc;
     border-radius: 5px;
+}
+
+textarea {
+    height: 10em;
 }
 
 input[type="checkbox"] {
