--- a/data_annotation/src/AnnotationForm.css
+++ b/data_annotation/src/AnnotationForm.css
@@ -38,3 +38,10 @@ textarea {
 input[type="checkbox"] {
     margin-left: 10px;
 }
+
+select {
+    margin-left: 10px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
