--- a/data_annotation/src/Tutorial.css
+++ b/data_annotation/src/Tutorial.css
@@ -2,8 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
@@ -15,11 +15,10 @@
   background: #fdf5e6;
   padding: 20px;
   border-radius: 8px;
-  width: 80%;
-  max-width: 600px;
+  width: 600px;
+  height: 70vh;
   position: relative;
   border: 1px solid black;
-  max-height: 80%;
   display: flex;
   flex-direction: column;
 }
@@ -36,7 +35,7 @@
 
 .tutorial-content {
   overflow-y: auto;
-  max-height: 50vh;
+  height: 100%;
 }
 
 .tutorial-image {
